# plan-and-execute-rag

./: .gitignore  README.md  pyproject.toml
src/agents/: rag_agent.py
src/app/: main.py
src/notebooks/: gen_data.ipynb  ragas.ipynb  tesla.csv  testset.csv
