[tool.poetry]
name = "plan-and-execute-rag"
version = "0.1.0"
description = ""
authors = ["Tomasz Wiszniowski <wiszniowski.t@gmail.com>"]
packages = [
    { include = "*", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.15"
langchain-community = "^0.2.13"
langchain-chroma = "^0.1.3"
streamlit = "^1.38.0"
langchain-openai = "^0.1.23"
langchain-experimental = "^0.0.64"
pypdf = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
