[tool.poetry]
name = "plan-and-execute-rag"
version = "0.1.0"
description = ""
authors = ["Tomasz Wiszniowski <wiszniowski.t@gmail.com>"]
packages = [
    { include = "*", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.2.15"
langchain-community = "^0.2.13"
langchain-chroma = "^0.1.3"
streamlit = "^1.38.0"
langchain-openai = "^0.1.23"
langchain-experimental = "^0.0.64"
pypdf = "^4.3.1"
ragas = "^0.1.15"
unstructured = {extras = ["md"], version = "^0.15.8"}
libmagic = "^1.0"
python-magic = "^0.4.27"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
